package com.xinqihd.sns.gameserver.proto;
//Tip Data

option java_outer_classname = "XinqiBseTip"; 

message BseTip {
  repeated string tips = 1;
}
